fix other comments
Signed-off-by: Laurent ARNAL <laurent@clae.net>